# mcp-invoice-generator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  dev.fastmcp.json  fastmcp.json  pyproject.toml  ruff.toml
app/: config.py  main.py  server.py
src/: cli.py  config.py  data.py  schemas.py  server.py  service.py
src/configs/: data.toml.example
templates/: invoice.html  invoice.typ  main.typ
tests/: conftest.py  test_server.py  test_tools.py
